# kparser

./: README.md
examples/ambiguous_arithmetic/: input.k  output.kore
examples/ambiugous_arithmetic/: input.k  output.kore
examples/parametric_examples/if_then_else/: input.k  output.kore
examples/simple_add/: input.k  output.kore
examples/templates/: input.k  output.kore
examples/unparametric_examples/ambiguous_arithmetic/: output.info.1.exp.sk  output.info.1.int.sk  output.info.1p2.sk  output.info.1p2p3.sk  output.info.kore  output.proof.kore
examples/unparametric_examples/ambiguous_arithmetic/happy/: Expr.y  happy_io.txt
examples/unparametric_examples/dangling_else/: output.info.kore  output.kore
examples/unparametric_examples/dangling_else/happy/: Expr.y  Main.hs  happy_io.txt
examples/unparametric_examples/keyword_rejection/: input.k
examples/unparametric_examples/positive_numbers/: output.kore
examples/unparametric_examples/rewrites_and_injections/: input.k
examples/unparametric_examples/simple_add/: output.kore
examples/unparametric_examples/simple_add/happy/: Expr.y  happy_io.txt
examples/unparametric_examples/subsorts_injections/: input.k
examples/unparametric_examples/templates/: output.kore
examples/unparametric_examples/templates/happy/: Expr.y  Main.hs  happy_io.txt
happy-test/: Expr.y  Main.lhs
simple-k-frontend/: front-end.py  tmp.k
simple-kore-frontend/: Cargo.toml  README.md
simple-kore-frontend/examples/: dangling_else.kf  test.kf
simple-kore-frontend/src/: ast.rs  lib.rs  main.rs  parser.lalrpop  parser.rs
